# aws-msai-lambdas

./: .gitignore  Makefile  README.md
.cloud/terraform/: main.tf  outputs.tf  vars.tf
.cloud/terraform/api-gateway/: main.tf  outputs.tf  vars.tf
.cloud/terraform/api-gateway-auth/: main.tf  outputs.tf  vars.tf
.cloud/terraform/api-gateway-user/: main.tf  outputs.tf  vars.tf
.cloud/terraform/dynamodb-ads/: main.tf  outputs.tf
.cloud/terraform/dynamodb-user/: main.tf  outputs.tf
.cloud/terraform/lambda/: main.tf  outputs.tf  vars.tf
.cloud/terraform/lambda-auth/: main.tf  vars.tf
.cloud/terraform/lambda-user/: main.tf  outputs.tf  vars.tf
.cloud/terraform/releases/: README.md
.cloud/terraform/s3/: main.tf  outputs.tf  vars.tf
.cloud/terraform/workspaces/: dev.tfvars  prod.tfvars
lambdas/msai-auth-service/: go.mod  main.go
lambdas/msai-image-service/: config.py  main.py  pyproject.toml  requirements.txt
lambdas/msai-image-service/application/: handler.py
lambdas/msai-image-service/events/: delete_event.json
lambdas/msai-image-service/repository/: s3_repository.py
lambdas/msai-image-uploader/: config.py  main.py  pyproject.toml  template.yaml  test_local.py
lambdas/msai-image-uploader/application/: image_service.py  jwt_service.py  routes.py
lambdas/msai-image-uploader/domain/: models.py
lambdas/msai-image-uploader/events/: upload_event.json
lambdas/msai-image-uploader/repository/: s3_repository.py
lambdas/msai-image-uploader/tests/: TESTING_GUIDE.md  test_lambda.py
lambdas/msai-user-service/: go.mod  go.sum  main.go
(+16 files in other folders)
