[tool.poetry]
name = "msai-image-uploader"
version = "0.1.0"
description = "AWS Lambda image uploader service with JWT authentication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.131"
PyJWT = "^2.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"
moto = "^5.1.5"
pytest-mock = "^3.14.1"
boto3-stubs = "^1.39.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"