[tool.poetry]
name = "msai-image-uploader"
version = "0.1.0"
description = "AWS Lambda image uploader service with JWT authentication"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
boto3 = "^1.34.131"
PyJWT = "^2.8.0"
python-multipart = "^0.0.6"
mangum = "^0.17.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
flake8 = "^6.0.0"
mypy = "^1.5.0"
moto = "^5.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
